Fri Jul 31 19:45:12 EDT 1998 The Rasterman <raster@redhat.com>
	* YES YES YES YES YES clist borders work again! YES! YES YES! gimme 
	  more baby oooh yeah more more MORE YES YES.

Fri Jul 31 19:45:12 EDT 1998 The Rasterman <raster@redhat.com>
	* hopefulyl fixed problem wiht togglebuttons acting like
          radiobuttons in gtktogglebutton.c

Thu Jul 30 23:36:46 EDT 1998 The Rasterman <raster@redhat.com>
	* fixed another drawing buglet in the frame drawing code (actually
	  in the clearing code but anyway in gtkstyle.c)

Thu Jul 30 19:23:48 EDT 1998 The Rasterman <raster@redhat.com>
	* Fixed warning from colorsel widget...

Thu Jul 30 19:10:42 EDT 1998 The Rasterman <raster@redhat.com>
	* Fixed defautl drawing code to no longer clobber the original style
	  pixmap bgs as it did and added a helper funciton og gtkstyle.c to
	  help with this.

Thu Jul 30 18:09:21 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrc.c gtk/gtkstyle.c: More mm fixups

	* gtk/gtktooltips.c: Pass a widget (the window) to the
	  drawing function instead of the GtkTooltips.

Thu Jul 30 17:27:10 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkwindow.c: Abstract out checking for shape
	  extension into a function.

	* gtk/gtkwindow.c: Fix up gtk_window_expose()/draw().
	  Remove extra callls to gtk_window_draw().

Thu Jul 30 11:18:43 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkstyle.c gtk/gtkrc.c: Memory management fixups.

	* themes/th_main.c: Moved messages around so they are
	  printed before destroying strings.

Wed Jul 29 16:56:07 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.c: Fairly simple implementation of expose compression.
	  (No GraphicsExpose compression yet, always compress
	  with the equivalent of XtCompressMultiple - no compression
	  of Expose events across non-Expose events)
	
	* gdk/gdk.h gdk/gdkrectangle.c: gdk_rectangle_union()
	  Find rectangle bounding two rectangles.

	* gtk/gtkstyle.c: Set clip rects for a few extra GC's