@@ -1,3 +1,6 @@
+Sat Aug  1 17:44:31 EDT 1998 EDT 1998 The Rasterman <raster@redhat.com>
+	* Wheeeeeeeeeeeeeeee fixed radiobittons to work in gimp again.
+
 Fri Jul 31 19:45:12 EDT 1998 The Rasterman <raster@redhat.com>
 	* YES YES YES YES YES clist borders work again! YES! YES YES! gimme 
 	  more baby oooh yeah more more MORE YES YES.
